--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>救護施設くるめ園</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <!-- <link rel="preload" href="../common/css/header.css" as="style"> -->
-    <link rel="stylesheet" href="../common/css/header.css">
-    <!-- <link rel="preload" href="../common/css/footer.css" as="style"> -->
-    <link rel="stylesheet" href="../common/css/footer.css">
-    <!-- <link rel="preload" href="../common/css/common.css" as="style"> -->
-    <link rel="stylesheet" href="../common/css/common.css">
-    <!-- <link rel="preload" href="css/index.css" as="style"> -->
+    <link rel="preload" href="common/css/header.css" as="style">
+    <link rel="stylesheet" href="common/css/header.css">
+    <link rel="preload" href="common/css/footer.css" as="style">
+    <link rel="stylesheet" href="common/css/footer.css">
+    <link rel="preload" href="common/css/common.css" as="style">
+    <link rel="stylesheet" href="common/css/common.css">
+    <link rel="preload" href="css/index.css" as="style">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
