--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header-logo">
+        <h1 class="header-logo anm-slide_bottom-left trg_load trg_load anm_time1">
             <a href="/"><img src="../common/images/logo.png" alt=""></a>
         </h1>
-        <ul class="header--pc-menu">
+        <ul class="header--pc-menu anm-slide_bottom-right trg_load anm_time3">
             <li><a href="">くるめ園について</a></li>
             <li><a href="">アクセス</a></li>
             <li><a href="">ブログ</a></li>
@@ -41,11 +41,11 @@
                 <ul class="slide-container slide">
                     <li class="slide-item">
                         <div class="slide-text-box">
-                            <p class="slide-ttl">くるめ園での生活</p>
-                            <p class="slide-text">
+                            <p class="slide-ttl anm-slide_top trg_load anm_l1">くるめ園での生活</p>
+                            <p class="slide-text anm-slide_top-left trg_load anm_l2">
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
-                            <a class="slide-btn" href="javascript:void(0)">くわしく</a>
+                            <a class="slide-btn anm-slide_top-left trg_load anm_l3" href="javascript:void(0)">くわしく</a>
                         </div>
                     </li>
                     <li class="slide-item">
@@ -71,7 +71,7 @@
         </section><!-- mv-container -->
         <section class="info-container">
             <div class="ly2-container">
-                <h2 class="ttl anm-slide_left">
+                <h2 class="ttl">
                     <span>おしらせ</span>
                 </h2>
                 <div class="scroll-box info-text_box">
@@ -80,11 +80,11 @@
             </div>
         </section><!-- info-container -->
         <section class="about-container fluid-wrap">
-                <h2 class="ttl anm-slide_left">
+                <h2 class="ttl anm-slide_left trg_scroll">
                     <span>くるめ園について</span>
                 </h2>
                 <div class="fluid">
-                    <div class="media ly-container anm-slide_top">
+                    <div class="media ly-container anm-slide_top-left  trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl">園でのせいかつ</h3>
                             <p class="text media-text">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="fluid about-item2">
-                    <div class="media media-re ly-container anm-slide_top">
+                    <div class="media media-re ly-container anm-slide_top-right anm_time2 trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl c-g2">ぎょうじ</h3>
                             <p class="text media-text">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="fluid about-item3">
-                    <div class="media ly-container anm-slide_left">
+                    <div class="media ly-container anm-slide_top-left anm_time2  trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl">園でのせいかつ</h3>
                             <p class="text media-text">
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="fluid about-item4">
-                    <div class="media media-re ly-container anm-slide_top">
+                    <div class="media media-re ly-container anm-slide_top-right anm_time2  trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl">ぎょうじ</h3>
                             <p class="text media-text">
@@ -140,11 +140,34 @@
                     </div>
                 </div>
         </section><!-- about-container -->
-        <section class="about-container">
+        <section class="blog-container">
             <div class="ly-container">
                 <h2 class="ttl anm-slide_left">
                     <span>ぶろぐ</span>
                 </h2>
+                <ul class="card slide2">
+                    <li class="card-item">
+                        <img src="common/images/mv1.jpg" alt="">
+                        <h3 class="card-ttl">タイトル</h3>
+                        <p class="card-text">
+                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        </p>
+                    </li>
+                    <li class="card-item">
+                        <img src="common/images/mv1.jpg" alt="">
+                        <h3 class="card-ttl">タイトル</h3>
+                        <p class="card-text">
+                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        </p>
+                    </li>
+                    <li class="card-item">
+                        <img src="common/images/mv1.jpg" alt="">
+                        <h3 class="card-ttl">タイトル</h3>
+                        <p class="card-text">
+                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        </p>
+                    </li>
+                </ul>
             </div>
         </section><!-- about-container -->
         <section class="about-container">
