--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     <link rel="stylesheet" href="common/css/footer.css">
     <link rel="preload" href="common/css/common.css" as="style">
     <link rel="stylesheet" href="common/css/common.css">
+    <link rel="preload" href="common/css/anime.css" as="style">
+    <link rel="stylesheet" href="common/css/anime.css">
     <link rel="preload" href="css/index.css" as="style">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header class="header">
-        <h1 class="header-logo anm-slide_bottom-left trg_load trg_load anm_time1">
+        <h1 class="header-logo anm_blur anm-slide_bottom-left trg_load trg_load anm_time1">
             <a href="/"><img src="../common/images/logo.png" alt=""></a>
         </h1>
-        <ul class="header--pc-menu anm-slide_bottom-right trg_load anm_time3">
+        <ul class="header--pc-menu anm_blur anm-slide_bottom-right trg_load anm_time3">
             <li><a href="">くるめ園について</a></li>
             <li><a href="">アクセス</a></li>
             <li><a href="">ブログ</a></li>
@@ -41,11 +43,11 @@
                 <ul class="slide-container slide">
                     <li class="slide-item">
                         <div class="slide-text-box">
-                            <p class="slide-ttl anm-slide_top trg_load anm_l1">くるめ園での生活</p>
-                            <p class="slide-text anm-slide_top-left trg_load anm_l2">
+                            <p class="slide-ttl anm_blur anm-slide_top trg_load anm_l1">くるめ園での生活</p>
+                            <p class="slide-text anm_blur anm-slide_top-left trg_load anm_l2">
                                 テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
                             </p>
-                            <a class="slide-btn anm-slide_top-left trg_load anm_l3" href="javascript:void(0)">くわしく</a>
+                            <a class="slide-btn anm_blur anm-slide_top-left trg_load anm_l3" href="javascript:void(0)">くわしく</a>
                         </div>
                     </li>
                     <li class="slide-item">
@@ -80,11 +82,11 @@
             </div>
         </section><!-- info-container -->
         <section class="about-container fluid-wrap">
-                <h2 class="ttl anm-slide_left trg_scroll">
+                <h2 class="ttl anm_blur trg_scroll">
                     <span>くるめ園について</span>
                 </h2>
                 <div class="fluid">
-                    <div class="media ly-container anm-slide_top-left  trg_scroll">
+                    <div class="media ly-container anm-slide_top-left anm_blur anm_time3 trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl">園でのせいかつ</h3>
                             <p class="text media-text">
@@ -142,30 +144,39 @@
         </section><!-- about-container -->
         <section class="blog-container">
             <div class="ly-container">
-                <h2 class="ttl anm-slide_left">
+                <h2 class="ttl anm_blur trg_scroll anm_time1">
                     <span>ぶろぐ</span>
                 </h2>
                 <ul class="card slide2">
-                    <li class="card-item">
+                    <li class="card-item trg_scroll anm-slide_top anm_blur anm_ls1">
                         <img src="common/images/mv1.jpg" alt="">
-                        <h3 class="card-ttl">タイトル</h3>
-                        <p class="card-text">
-                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        </p>
+                        <div class="card-text_box">
+                            <h3 class="card-ttl">タイトル</h3>
+                            <p class="text card-text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <a href="" class="card-btn">もっと見る</a>
+                        </div>
                     </li>
-                    <li class="card-item">
+                    <li class="card-item trg_scroll anm-slide_top anm_blur anm_ls2">
                         <img src="common/images/mv1.jpg" alt="">
-                        <h3 class="card-ttl">タイトル</h3>
-                        <p class="card-text">
-                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        </p>
+                        <div class="card-text_box">
+                            <h3 class="card-ttl">タイトル</h3>
+                            <p class="text card-text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <a href="" class="card-btn">もっと見る</a>
+                        </div>
                     </li>
-                    <li class="card-item">
+                    <li class="card-item trg_scroll anm-slide_top anm_blur anm_ls3">
                         <img src="common/images/mv1.jpg" alt="">
-                        <h3 class="card-ttl">タイトル</h3>
-                        <p class="card-text">
-                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        </p>
+                        <div class="card-text_box">
+                            <h3 class="card-ttl">タイトル</h3>
+                            <p class="text card-text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <a href="" class="card-btn">もっと見る</a>
+                        </div>
                     </li>
                 </ul>
             </div>
