--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header-logo anm_blur anm-slide_bottom-left trg_load trg_load anm_time1">
+        <h1 class="header-logo anm_blur anm-slide_bottom-left trg_load trg_load anm_time3">
             <a href="/"><img src="../common/images/logo.png" alt=""></a>
         </h1>
-        <ul class="header--pc-menu anm_blur anm-slide_bottom-right trg_load anm_time3">
+        <ul class="header--pc-menu anm_blur anm-slide_bottom-right trg_load anm_l1">
             <li><a href="">くるめ園について</a></li>
             <li><a href="">アクセス</a></li>
             <li><a href="">ブログ</a></li>
@@ -41,7 +41,7 @@
         <section class="mv-container">
             <div class="slide-wrap">
                 <ul class="slide-container slide">
-                    <li class="slide-item">
+                    <li class="slide-item anm_blur trg_load anm_time2">
                         <div class="slide-text-box">
                             <p class="slide-ttl anm_blur anm-slide_top trg_load anm_l1">くるめ園での生活</p>
                             <p class="slide-text anm_blur anm-slide_top-left trg_load anm_l2">
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div class="fluid about-item2">
-                    <div class="media media-re ly-container anm-slide_top-right anm_time2 trg_scroll">
+                    <div class="media media-re ly-container anm_blur anm-slide_top-right anm_time2 trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl c-g2">ぎょうじ</h3>
                             <p class="text media-text">
@@ -114,30 +114,32 @@
                     </div>
                 </div>
                 <div class="fluid about-item3">
-                    <div class="media ly-container anm-slide_top-left anm_time2  trg_scroll">
+                    <div class="media ly-container anm_blur anm-slide_top-left anm_time2  trg_scroll">
                         <div class="media-item">
-                            <h3 class="media-ttl">園でのせいかつ</h3>
+                            <h3 class="media-ttl">施設概要</h3>
                             <p class="text media-text">
-                                くるめ園では、様々な方が生活しています。障害を持った方や、車椅子の方など様々です。そんな方たちが、日々安心して生活をおくれるように支援させていただきます。
+                                くるめ園では、車椅子の方や、障害が重い方が生活をおくれるように、いろいろな設備があります。<br />
+                                寝たきりの方が入れるお風呂や、車椅子の方でも利用できるトイレ、身体機能維持などのために行うリハビリを実施できる環境など様々です。
                             </p>
                             <a href="" class="btn media-btn">もっと見る</a>
                         </div>
                         <div class="media-img fluid2">
-                            <img src="../common/images/about-img1.jpg" alt="">
+                            <img src="../common/images/about-img3.jpg" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="fluid about-item4">
-                    <div class="media media-re ly-container anm-slide_top-right anm_time2  trg_scroll">
+                    <div class="media media-re ly-container anm_blur anm-slide_top-right anm_time2  trg_scroll">
                         <div class="media-item">
-                            <h3 class="media-ttl">ぎょうじ</h3>
+                            <h3 class="media-ttl">サービスについて</h3>
                             <p class="text media-text">
-                                くるめ園では、日々の生活の中で利用者の方に楽しんでいただくため、様々な行事を行っております。一泊二日旅行や、秋祭り、正月三ヶ日などいろいろな行事を毎年行なっております。
+                                くるめ園では、より生活が送りやすいようにいろいろなサービスを提供しています。<br />
+                                髪を切るための、理美容、歯の治療を行う訪問歯科、お散歩のボランティアなど様々なサービスを行っています。
                             </p>
                             <a href="" class="btn media-btn">もっと見る</a>
                         </div>
                         <div class="media-img fluid2">
-                            <img src="../common/images/about-img2.jpg" alt="">
+                            <img src="../common/images/about-img3.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -149,7 +151,7 @@
                 </h2>
                 <ul class="card slide2">
                     <li class="card-item trg_scroll anm-slide_top anm_blur anm_ls1">
-                        <img src="common/images/mv1.jpg" alt="">
+                        <img src="common/images/mv2.jpg" alt="">
                         <div class="card-text_box">
                             <h3 class="card-ttl">タイトル</h3>
                             <p class="text card-text">
@@ -159,7 +161,7 @@
                         </div>
                     </li>
                     <li class="card-item trg_scroll anm-slide_top anm_blur anm_ls2">
-                        <img src="common/images/mv1.jpg" alt="">
+                        <img src="common/images/mv2.jpg" alt="">
                         <div class="card-text_box">
                             <h3 class="card-ttl">タイトル</h3>
                             <p class="text card-text">
@@ -169,7 +171,7 @@
                         </div>
                     </li>
                     <li class="card-item trg_scroll anm-slide_top anm_blur anm_ls3">
-                        <img src="common/images/mv1.jpg" alt="">
+                        <img src="common/images/mv2.jpg" alt="">
                         <div class="card-text_box">
                             <h3 class="card-ttl">タイトル</h3>
                             <p class="text card-text">
@@ -180,21 +182,31 @@
                     </li>
                 </ul>
             </div>
-        </section><!-- about-container -->
-        <section class="about-container">
+        </section><!-- blog-container -->
+        <section class="access-container">
             <div class="ly-container">
-                <h2 class="ttl anm-slide_left">
+                <h2 class="ttl anm_blur trg_scroll">
                     <span>来園について</span>
                 </h2>
+                <div class="google-map anm_blur anm-slide_top anm_time4 trg_scroll">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.712290426352!2d139.4887860150362!3d35.70869703607302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018e5cc72a292b7%3A0xe452abe47b027b90!2z5pWR6K235pa96KitIOOBj-OCi-OCgeWckg!5e0!3m2!1sja!2sjp!4v1660972859739!5m2!1sja!2sjp" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
-        </section><!-- about-container -->
-        <section class="about-container">
+        </section><!-- access-container -->
+        <section class="job-container">
             <div class="ly-container">
-                <h2 class="ttl anm-slide_left">
+                <h2 class="ttl anm_blur trg_scroll">
                     <span>採用情報</span>
                 </h2>
             </div>
-        </section><!-- about-container -->
+        </section><!-- job-container -->
+        <section class="link-container">
+            <div class="ly-container">
+                <h2 class="ttl anm_blur trg_scroll">
+                    <span>まりも会運営施設</span>
+                </h2>
+            </div>
+        </section><!-- job-container -->
     </main>
     <footer class="footer">
 
