--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
                     <span>くるめ園について</span>
                 </h2>
                 <div class="fluid">
-                    <div class="media ly-container anm-slide_top-left anm_blur anm_time3 trg_scroll">
+                    <div class="media ly-container anm-slide_top anm_time2 trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl">園でのせいかつ</h3>
                             <p class="text media-text">
                                 くるめ園では、様々な方が生活しています。障害を持った方や、車椅子の方など様々です。そんな方たちが、日々安心して生活をおくれるように支援させていただきます。
                             </p>
-                            <a href="" class="btn media-btn">もっと見る</a>
+                            <a href="" class="btn media-btn">
+                                <span>もっと見る</span>
+                            </a>
                         </div>
                         <div class="media-img fluid2">
                             <img src="../common/images/about-img1.jpg" alt="">
@@ -100,13 +102,15 @@
                     </div>
                 </div>
                 <div class="fluid about-item2">
-                    <div class="media media-re ly-container anm_blur anm-slide_top-right anm_time2 trg_scroll">
+                    <div class="media media-re ly-container anm-slide_top-right anm_time1 trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl c-g2">ぎょうじ</h3>
                             <p class="text media-text">
                                 くるめ園では、日々の生活の中で利用者の方に楽しんでいただくため、様々な行事を行っております。一泊二日旅行や、秋祭り、正月三ヶ日などいろいろな行事を毎年行なっております。
                             </p>
-                            <a href="" class="btn media-btn">もっと見る</a>
+                            <a href="" class="btn media-btn">
+                                <span>もっと見る</span>
+                            </a>
                         </div>
                         <div class="media-img fluid2">
                             <img src="../common/images/about-img2.jpg" alt="">
@@ -114,14 +118,16 @@
                     </div>
                 </div>
                 <div class="fluid about-item3">
-                    <div class="media ly-container anm_blur anm-slide_top-left anm_time2  trg_scroll">
+                    <div class="media ly-container anm-slide_top-left anm_time1  trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl">施設概要</h3>
                             <p class="text media-text">
                                 くるめ園では、車椅子の方や、障害が重い方が生活をおくれるように、いろいろな設備があります。<br />
                                 寝たきりの方が入れるお風呂や、車椅子の方でも利用できるトイレ、身体機能維持などのために行うリハビリを実施できる環境など様々です。
                             </p>
-                            <a href="" class="btn media-btn">もっと見る</a>
+                            <a href="" class="btn media-btn">
+                                <span>もっと見る</span>
+                            </a>
                         </div>
                         <div class="media-img fluid2">
                             <img src="../common/images/about-img3.jpg" alt="">
@@ -129,14 +135,16 @@
                     </div>
                 </div>
                 <div class="fluid about-item4">
-                    <div class="media media-re ly-container anm_blur anm-slide_top-right anm_time2  trg_scroll">
+                    <div class="media media-re ly-container anm-slide_top-right anm_time1  trg_scroll">
                         <div class="media-item">
                             <h3 class="media-ttl">サービスについて</h3>
                             <p class="text media-text">
                                 くるめ園では、より生活が送りやすいようにいろいろなサービスを提供しています。<br />
                                 髪を切るための、理美容、歯の治療を行う訪問歯科、お散歩のボランティアなど様々なサービスを行っています。
                             </p>
-                            <a href="" class="btn media-btn">もっと見る</a>
+                            <a href="" class="btn media-btn">
+                                <span>もっと見る</span>
+                            </a>
                         </div>
                         <div class="media-img fluid2">
                             <img src="../common/images/about-img3.jpg" alt="">
@@ -186,11 +194,41 @@
         <section class="access-container">
             <div class="ly-container">
                 <h2 class="ttl anm_blur trg_scroll">
-                    <span>来園について</span>
+                    <span>アクセス</span>
                 </h2>
+                
                 <div class="google-map anm_blur anm-slide_top anm_time4 trg_scroll">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.712290426352!2d139.4887860150362!3d35.70869703607302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018e5cc72a292b7%3A0xe452abe47b027b90!2z5pWR6K235pa96KitIOOBj-OCi-OCgeWckg!5e0!3m2!1sja!2sjp!4v1660972859739!5m2!1sja!2sjp" width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
+                <p class="access-text text">
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト<br />
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                </p>
+                <div class="clip-box">
+                    <img class="trg_scroll anm-slide_left" src="common/images/access-img.jpg" alt="" />
+                    <dl class="access-list fluid2 trg_scroll anm-slide_top-right anm_l1">
+                        <dt>所在地</dt>
+                        <dd>
+                            〒187-0045<br />
+                            東京都小平市上水南町4-7-45<br />
+                            まりもビル2階救護施設くるめ園
+                        </dd>
+                        <dt>連絡先</dt>
+                        <dd>
+                            TEL: 042-321-8866<br />
+                            MAIL:info@kurumeen.jp
+                        </dd>
+                        <dt>営業時間</dt>
+                        <dd>
+                            営業時間　9:00〜17:00<br />
+                            定休日　土日・祝日
+                        </dd>
+                    </dl>
+                    <a href="" class="btn anm_time1">
+                        <span>もっと見る</span>
+                    </a>
+                </div>
+                
             </div>
         </section><!-- access-container -->
         <section class="job-container">
@@ -198,6 +236,23 @@
                 <h2 class="ttl anm_blur trg_scroll">
                     <span>採用情報</span>
                 </h2>
+                <div class="scroll-box info-text_box">
+
+                </div>
+            </div>
+            <div class="job-inner">
+                <div class="job-item trg_scroll anm-slide">
+                    <img class="job-img" src="common/images/about-img1.jpg" alt="">
+                    <div class="ly-container">
+                        <h3 class="job-ttl">常勤（正社員）</h3>
+                        <p class="text">
+                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                        </p>
+                        <a href="" class="btn ">
+                            <span>くわしく</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </section><!-- job-container -->
         <section class="link-container">
