リンクのエリア作成中

--- a/index.html
+++ b/index.html
@@ -236,21 +236,65 @@
                 <h2 class="ttl anm_blur trg_scroll">
                     <span>採用情報</span>
                 </h2>
-                <div class="scroll-box info-text_box">
+                <div class="scroll-box job-text_box">
 
                 </div>
             </div>
             <div class="job-inner">
-                <div class="job-item trg_scroll anm-slide">
+                <div class="job-item trg_scroll">
                     <img class="job-img" src="common/images/about-img1.jpg" alt="">
                     <div class="ly-container">
-                        <h3 class="job-ttl">常勤（正社員）</h3>
-                        <p class="text">
-                            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-                        </p>
-                        <a href="" class="btn ">
-                            <span>くわしく</span>
-                        </a>
+                        <div class="job-text-area">
+                            <h3 class="job-ttl">常勤（正社員）</h3>
+                            <p class="text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <a href="" class="btn ">
+                                <span>くわしく</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="job-item job-item_re trg_scroll">
+                    <img class="job-img" src="common/images/about-img2.jpg" alt="">
+                    <div class="ly-container">
+                        <div class="job-text-area">
+                            <h3 class="job-ttl">常勤（正社員）</h3>
+                            <p class="text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <a href="" class="btn ">
+                                <span>くわしく</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="job-item trg_scroll">
+                    <img class="job-img" src="common/images/about-img1.jpg" alt="">
+                    <div class="ly-container">
+                        <div class="job-text-area">
+                            <h3 class="job-ttl">常勤（正社員）</h3>
+                            <p class="text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <a href="" class="btn ">
+                                <span>くわしく</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="job-item job-item_re trg_scroll">
+                    <img class="job-img" src="common/images/about-img2.jpg" alt="">
+                    <div class="ly-container">
+                        <div class="job-text-area">
+                            <h3 class="job-ttl">常勤（正社員）</h3>
+                            <p class="text">
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <a href="" class="btn ">
+                                <span>くわしく</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -260,6 +304,93 @@
                 <h2 class="ttl anm_blur trg_scroll">
                     <span>まりも会運営施設</span>
                 </h2>
+                <p class="text">
+                    社会福祉法人まりも会では、くるめ園の他にもたくさんの福祉施設を運営しております。<br />
+                    障害をお持ちの方をサポートするための、小金井市障害福祉センター、重い肢体不自由が<br />
+                    生活を送っている清瀬療護園。その他にもたくさんの施設を運営しております。
+                </p>
+                <ul class="flex link-list">
+                    <li class="link-item">
+                        <a href="">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section><!-- job-container -->
     </main>
