--- a/index.html
+++ b/index.html
@@ -395,7 +395,40 @@
         </section><!-- job-container -->
     </main>
     <footer class="footer">
-
+        <div class="flex ly-container">
+            <div class="footer-item">
+                <a class="footer-logo" href=""><img src="common/images/logo.png" alt=""></a>
+                <p class="footer-ttl">くるめ園について</p>
+                <ul class="footer-list flex">
+                    <li><a href="">くるめ園での生活</a></li>
+                    <li><a href="">ぎょうじ</a></li>
+                    <li><a href="">せつび</a></li>
+                    <li><a href="">外部サービス</a></li>
+                    <li><a href="">ぶろぐ</a></li>
+                    <li><a href="">採用情報</a></li>
+                    <li><a href="">アクセス</a></li>
+                    <li><a href="">お問い合わせ</a></li>
+                </ul>
+            </div>
+            <div class="footer-item footer-item02">
+                <a class="tel-btn" href="tel:042-321-8866">042-321-8866</a>
+                <a class="contact-btn" href="">お問い合わせ</a>
+                <div class="footer-inner">
+                    <p class="footer-ttl">くるめ園について</p>
+                    <ul class="footer-list flex">
+                        <li><a href="">くるめ園での生活</a></li>
+                        <li><a href="">ぎょうじ</a></li>
+                        <li><a href="">せつび</a></li>
+                        <li><a href="">外部サービス</a></li>
+                        <li><a href="">ぶろぐ</a></li>
+                        <li><a href="">採用情報</a></li>
+                        <li><a href="">アクセス</a></li>
+                        <li><a href="">お問い合わせ</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <small class="copy-right">Copyright ©社会福祉法人 まりも会　救護施設くるめ園</small>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
