リンク先追加

--- a/index.html
+++ b/index.html
@@ -311,7 +311,37 @@
                 </p>
                 <ul class="flex link-list">
                     <li class="link-item">
-                        <a href="">
+                        <a href="https://marimokai.jp/facility/marimo" target="_blank">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">特別養護老人ホームまりも園</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="https://marimokai.jp/facility/marimo-dsc" target="_blank">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">まりも園デイサービスセンター</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="https://marimokai.jp/facility/marimo-ssc" target="_blank">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">まりも園居宅介護支援相談センター</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="https://marimokai.jp/facility/kiyose" target="_blank">
                             <img src="common/images/links-img2.png" alt="">
                             <span class="link-text-box">
                                 <span class="link-ttl">清瀬療護園</span>
@@ -321,8 +351,28 @@
                         </a>
                     </li>
                     <li class="link-item">
-                        <a href="">
+                        <a href="https://marimokai.jp/facility/kiyose-ssc" target="_blank">
                             <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">清瀬療護園 障がい者相談支援センター</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="https://marimokai.jp/facility/casa_marimo" target="_blank">
+                            <img src="common/images/links-img2.png" alt="">
+                            <span class="link-text-box">
+                                <span class="link-ttl">グループホームカーサマリモ</span>
+                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
+                                <span class="link-btn">くわしく</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="link-item">
+                        <a href="https://marimokai.jp/facility/koganei" target="_blank">
+                            <img src="common/images/links-img2.png" alt="小金井市障害者福祉センター">
                             <span class="link-text-box">
                                 <span class="link-ttl">清瀬療護園</span>
                                 <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
@@ -331,57 +381,7 @@
                         </a>
                     </li>
                     <li class="link-item">
-                        <a href="">
-                            <img src="common/images/links-img2.png" alt="">
-                            <span class="link-text-box">
-                                <span class="link-ttl">清瀬療護園</span>
-                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
-                                <span class="link-btn">くわしく</span>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="link-item">
-                        <a href="">
-                            <img src="common/images/links-img2.png" alt="">
-                            <span class="link-text-box">
-                                <span class="link-ttl">清瀬療護園</span>
-                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
-                                <span class="link-btn">くわしく</span>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="link-item">
-                        <a href="">
-                            <img src="common/images/links-img2.png" alt="">
-                            <span class="link-text-box">
-                                <span class="link-ttl">清瀬療護園</span>
-                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
-                                <span class="link-btn">くわしく</span>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="link-item">
-                        <a href="">
-                            <img src="common/images/links-img2.png" alt="">
-                            <span class="link-text-box">
-                                <span class="link-ttl">清瀬療護園</span>
-                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
-                                <span class="link-btn">くわしく</span>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="link-item">
-                        <a href="">
-                            <img src="common/images/links-img2.png" alt="">
-                            <span class="link-text-box">
-                                <span class="link-ttl">清瀬療護園</span>
-                                <span class="link-text text">テキストテキストテキストテキストテキストテキスト</span>
-                                <span class="link-btn">くわしく</span>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="link-item">
-                        <a href="">
+                        <a href="" target="_blank">
                             <img src="common/images/links-img2.png" alt="">
                             <span class="link-text-box">
                                 <span class="link-ttl">清瀬療護園</span>
@@ -412,18 +412,17 @@
             </div>
             <div class="footer-item footer-item02">
                 <a class="tel-btn" href="tel:042-321-8866">042-321-8866</a>
-                <a class="contact-btn" href="">お問い合わせ</a>
+                <a class="contact-btn" target="_blank" href="https://marimokai.jp/contact">お問い合わせ</a>
                 <div class="footer-inner">
-                    <p class="footer-ttl">くるめ園について</p>
-                    <ul class="footer-list flex">
-                        <li><a href="">くるめ園での生活</a></li>
-                        <li><a href="">ぎょうじ</a></li>
-                        <li><a href="">せつび</a></li>
-                        <li><a href="">外部サービス</a></li>
-                        <li><a href="">ぶろぐ</a></li>
-                        <li><a href="">採用情報</a></li>
-                        <li><a href="">アクセス</a></li>
-                        <li><a href="">お問い合わせ</a></li>
+                    <p class="footer-ttl">運営施設一覧</p>
+                    <ul class="footer-list">
+                        <li><a href="https://marimokai.jp/facility/marimo" target="_blank" rel="noopener noreferrer">特別養護老人ホームまりも園</a></li>
+                        <li><a href="https://marimokai.jp/facility/marimo-dsc" target="_blank" rel="noopener noreferrer">まりも園デイサービスセンター</a></li>
+                        <li><a href="https://marimokai.jp/facility/marimo-ssc" target="_blank" rel="noopener noreferrer">まりも園居宅介護支援相談センター</a></li>
+                        <li><a href="https://marimokai.jp/facility/kiyose" target="_blank" rel="noopener noreferrer">清瀬療護園</a></li>
+                        <li><a href="https://marimokai.jp/facility/kiyose-ssc" target="_blank" rel="noopener noreferrer">障害者相談支援センター</a></li>
+                        <li><a href="https://marimokai.jp/facility/casa_marimo" target="_blank" rel="noopener noreferrer">グループホームカーサマリモ</a></li>
+                        <li><a href="https://marimokai.jp/facility/koganei" target="_blank" rel="noopener noreferrer">小金井市障害者福祉センター</a></li>
                     </ul>
                 </div>
             </div>
